--- a/public/style.css
+++ b/public/style.css
@@ -68,14 +68,96 @@ body{
     margin-top: 0;
 }
 
-.introSentence h1{
-    margin:0;
-    text-align: center;
+.myIntroduction div{
+    background-color: black;
+    float: left;
+    height: 100%;
 }
 
-.introSentence h3{
-    margin:0;
+.myPicture{
+    width: 40%;
+}
+
+@property --gap{
+    syntax: '<length>';
+    inherits: true;
+    initial-value: 0;
+}
+
+@property --angle{
+    syntax: '<angle>';
+    inherits: true;
+    initial-value: 0deg;
+}
+
+.myPicture img{
+    --border: 20px;
+    --gap: 12px;
+    --color: #1ea70cec;
+
+    width: 80%;
+    aspect-ratio: 1;
+    box-sizing: border-box;
+    border-radius:50%;
+    margin: 10px 0 0 40px;
+    cursor: pointer;
+    padding: calc(var(--border) + var(--gap));
+
+    --angle:90deg;
+    background:
+        radial-gradient(farthest-side,var(--color) 97%,#0000 101%) 85.35% 85.35%,
+        conic-gradient(from calc(180deg - var(--angle)/2),#0000 var(--angle),var(--color) 0),
+        radial-gradient(farthest-side,var(--color) 97%,#0000 101%) 14.65% 85.35%;
+     background-size: var(--border) var(--border),auto;
+    background-repeat: no-repeat;
+  
+    -webkit-mask:
+        radial-gradient(farthest-side, 
+        #000  calc(99%  - calc(var(--border) + var(--gap))),
+        #0000 calc(100% - calc(var(--border) + var(--gap))) 
+            calc(99%  - var(--border)), 
+        #000  calc(100% - var(--border)));
+            mask:
+        radial-gradient(farthest-side, 
+        #000  calc(99%  - calc(var(--border) + var(--gap))),
+        #0000 calc(100% - calc(var(--border) + var(--gap))) 
+            calc(99%  - var(--border)), 
+        #000  calc(100% - var(--border)));
+    transition: --angle .4s,--gap .4s;
+}
+
+.myPicture img:hover{
+    --angle: 0deg;
+    --gap: 5px;
+}
+
+.introSentence{
+    top:50%;
+    left: 50%;
+    transform: translate(0,100%);
+    width: 60%;
+    height: 100%;
+    align-items:last baseline;
+}
+
+.introSentence div{
+    margin: 0;
+    padding: 0;
     text-align: center;
+    font-family: "Lato", sans-serif;
+    width: 100%;
+    height: 33.33%;
+}
+
+.introSentence .a{
+    margin:0 0 20px 0;
+    padding: 0;
+    top: 50%;
+    left: 50%;
+    transform: translate(0,10%);
+    font-size: 50px;
+    font-weight: 900;
+    font-style: normal;
 }
 
 .footer{
