Navigation Bar design and layout

--- a/public/style.css
+++ b/public/style.css
@@ -1,5 +1,6 @@
 *{
     box-sizing: border-box;
+    scroll-behavior:smooth;
 }
 
 body{
@@ -8,10 +9,10 @@ body{
     font-family: 'Source Code Pro', monospace;
 }
 
-.sideNav{
-    height: 100%;
-    width: 8%;
-    position: fixed;
+.stickyNav{
+    height: 40px;
+    width: 100%;
+    position: sticky;
     z-index: 1;
     top: 0;
     left: 0;
@@ -20,15 +21,20 @@ body{
 }   
 
 .menu{
+    display: flex;
+    justify-content: center;
+    align-items: center;
     margin: 0;
-    top: 60%;
+    height: 100%;
+    /*top: 60%;
     left: 50%;
-    transform: translate(0,75%);
+    transform: translate(0,75%);*/
 }
 
 .menu a{
+    float: left;
+    padding:0 15px 0 15px;
     color: white;
-    padding: 16px;
     text-decoration: none;
     display: block;
 }
@@ -39,7 +45,8 @@ body{
 }
 
 .mainSection{
-    margin-left: 8%;
+    width: 100%;
+    height: 100%;
     color: white;
 }
 
@@ -56,7 +63,7 @@ body{
 
 .mainContent{
     width: 100%;
-    height: 720px;
+    height: 760px;
     background-color:white;
     /*margin-left: 1%;
     margin-top: 10px;
@@ -66,7 +73,7 @@ body{
 .myIntroduction{
     background-color: black;
     margin-top: 0;
-    height: 415px;
+    height: 560px;
 }
 
 .myIntroduction div{
@@ -75,7 +82,7 @@ body{
 }
 
 .myPicture{
-    width: 40%;
+    width: 50%;
 }
 
 @property --gap{
@@ -95,11 +102,11 @@ body{
     --gap: 12px;
     --color: #1ea70c;
 
-    width: 85%;
+    width: 80%;
     aspect-ratio: 1;
     box-sizing: border-box;
     border-radius:50%;
-    margin: 10px 0 0 40px;
+    margin: 10px 0 0 80px;
     cursor: pointer;
     padding: calc(var(--border) + var(--gap));
 
@@ -135,14 +142,14 @@ body{
     /*top:50%;
     left: 50%;
     transform: translate(0,100%);*/
-    width: 60%;
+    width: 50%;
     height: 100%;
     align-items:last baseline;
 }
 
 .introSentence .myNameAndCourse{
     height: 200px;
-    margin: 140px 0 0 0;
+    margin: 180px 0 0 0;
     padding: 0;
     
 }
@@ -153,30 +160,27 @@ body{
 }
 
 .introSentence .a{
-    margin:0 0 5px 0;
+    margin:0 0 8px 0;
     padding: 0 0 10px 0;
-    height: 100px;
-    /*top: 50%;
-    left: 50%;
-    transform: translate(0,10%);*/
-    font-size: 70px;
+    height: 105px;
+    font-size: 80px;
     font-weight: 900;
     font-style: normal;
-    border-bottom: 8px solid #1ea70c;
+    border-bottom: 10px solid #1ea70c;
 }
 
 .introSentence .b{
-    margin:0 0 5px 0;
+    margin:0 0 6px 0;
     padding: 0;
     height: 22px;
-    font-size: 22px;
+    font-size: 24px;
 }
 
 .introSentence .c{
     margin:0;
     padding: 0;
     height: 22px;
-    font-size: 22px;
+    font-size: 24px;
 }
 
 .footer{
